# flexistamp

./: .gitignore  CMakeLists.txt  README.md
src/: glzt.cpp  handler.cpp  huffman.cpp  main.cpp
